fixed spacing problem:

--- a/style.css
+++ b/style.css
@@ -113,12 +113,13 @@ html, body{
 }
     .main-paragraphs{
         width: 80%;
-        margin: 2% auto;
+        margin: 2% auto 0 auto;
     }
         .main-p{
             display: flex;
             align-items: center;
-            margin: 10em auto;
+            margin: 10em auto 0 auto;
+            padding-bottom: 2em;
         }
         .paragraph{
             transition-duration: 300ms;
@@ -499,6 +500,12 @@ html, body{
 }
 
 @media screen and (max-width: 1100px){
+    .new-background{
+        min-height: 1600px;
+    }
+        .main-p{
+            margin-top: 10px;
+        }
     .paragraph{
         transition-duration: 300ms;
         font-size: 1.2em;
@@ -641,6 +648,10 @@ html, body{
     .social-media{
         margin: 20px auto;
     }
+
+    .new-background{
+        min-height: 1000px;
+    }
 }
 
 @media screen and (max-width: 563px){
@@ -662,6 +673,10 @@ html, body{
     .my-picture{
         max-height: 350px;
     }
+    
+    .main-p{
+        margin-top: 70px;
+    }
 }
 
 @media screen and (max-width: 400px){
@@ -679,6 +694,10 @@ html, body{
             transition-duration: 300ms;
             font-size: .7em;
         }
+
+    .main-p, .main-paragraphs{
+        margin-bottom: 0;
+    }
 }
 
 @media screen and (max-width: 372px){
